--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,22 @@
 body {
-    font-family: 'Papyrus MS', 'Comic Sans MS', "Comic Sans", sans-serif;
-
+  font-family: "Papyrus MS", "Comic Sans MS", "Comic Sans", sans-serif;
 }
 
 header h1 {
-    font-weight: normal;
+  font-weight: normal;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+section {
+  min-height: 100vh;
 }
